objects/HealthCloudGA__HcHelpTray__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ContentType__c</fullName>
        <label>ContentType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Help Doc</fullName>
                    <default>true</default>
                    <label>Help Doc</label>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HelpUrl__c</fullName>
        <label>Help Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IconPath__c</fullName>
        <label>Icon path</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Label__c</fullName>
        <label>Label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>HcHelpTray</label>
    <pluralLabel>HcHelpTray</pluralLabel>
</CustomObject>